--- a/main.css
+++ b/main.css
@@ -5,32 +5,41 @@
 }
 
 body {
-    background: #eee;
-}
-
-#grid {
-    align-items: flex-start;
-    background: #fff;
-    border-top: 1px solid #333;
-    border-left: 1px solid #333;
-    box-sizing: content-box;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+    margin: 0;
+    background-color: #333;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    left: 50%;
-    min-height: 100px;
-    min-width: 100px;
-    position: fixed;
-    top: 50%;
-    z-index: 10;
+    justify-content: center;
+    align-items: center;
+    font-size: 3rem;
+    flex-direction: column;
+    color: white;   
 }
 
-#grid .cell {
-    border: 1px solid #333;
-    border-top: none;
-    border-left: none;
-    display: block;
-    height: 10px;
-    width: 10px;
+.board {
+    display: inline-grid;
+    padding: 10px;
+    grid-template-columns: repeat(var(--size), 60px);
+    grid-template-rows: repeat(var(--size), 60px);
+    gap: 4px;
+    background-color: #777;
+}
+
+.board > * {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    user-select: none;
+}
+
+.board > [data-status="dead"] {
+    background-color: white;
+    cursor: pointer;
+}
+
+.board > [data-status="alive"] {
+    background-color: black;
+    cursor: pointer;
 }
